Implemented game restart

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <span class="left">Highscore: </span>
             <span class="right" id="highScoreText">...</span>
           </div>
+          <button id="restart">Restart Game</button>
         </div>
       </div>
     </main>
