Reworking game state for high scores and different levels

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <span class="left">Highscore: </span>
             <span class="right" id="highScoreText">...</span>
           </div>
-          <button id="restart">Restart Game</button>
         </div>
       </div>
     </main>
+    <button id="restart">New Game</button>
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
