Implement high scores across rounds

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <div id="info" class="flex col">
           <div class="text">
             <span class="left">Level: </span>
-            <span class="right" id="levelText">...</span>
+            <span class="right" id="levelText">0</span>
           </div>
           <div class="text">
             <span class="left">Score: </span>
-            <span class="right" id="scoreText">...</span>
+            <span class="right" id="scoreText">0</span>
           </div>
           <div class="text">
             <span class="left">Highscore: </span>
-            <span class="right" id="highScoreText">...</span>
+            <span class="right" id="highScoreText">0</span>
           </div>
         </div>
       </div>
