--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>FIT2102 A1 2023</title>
   </head>
   <body>
-    <h1>Tetris</h1>
+    <h1 class="glitch">Tetris</h1>
     <main id="main" class="flex row">
       <svg id="svgCanvas">
         <!-- game over text box -->
