--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@
     <title>FIT2102 A1 2023</title>
   </head>
   <body>
-    <h1 class="glitch">Tetris</h1>
+    <h1 class="glitch">FRP Tetris</h1>
     <main id="main" class="flex row">
+      <div id="controls" class="flex col text">
+        <h2>Controls</h2>
+        <div class="text">
+          <span class="left">A - Left</span>
+        </div>
+        <div class="text">
+          <span class="left">S - Down</span>
+        </div>
+        <div class="text">
+          <span class="left">D - Right</span>
+        </div>
+        <div class="text">
+          <span class="left">X - Rotate CW</span>
+        </div>
+        <div class="text">
+          <span class="left">W - Rotate CCW</span>
+        </div>
+      </div>
       <svg id="svgCanvas">
         <!-- game over text box -->
         <g id="gameOver" visibility="hidden">
