Add levelup tip

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <span class="left">Highscore: </span>
             <span class="right" id="highScoreText">0</span>
           </div>
+          <div class="tip">
+            <span class="left">5 Rows to Level Up!</span>
+          </div>
         </div>
       </div>
     </main>
