Working on wall kicks

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>FIT2102 A1 2023</title>
+    <title>FRP Tetris</title>
   </head>
   <body>
     <h1 class="glitch">FRP Tetris</h1>
