--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>FRP Tetris</title>
   </head>
   <body>
+    <div class="pattern-bg"></div>
     <h1 class="glitch">FRP Tetris</h1>
     <main id="main" class="flex row">
       <div id="controls" class="flex col text">
@@ -17,10 +18,13 @@
           <span class="left">D - Right</span>
         </div>
         <div class="text">
-          <span class="left">X - Rotate CW</span>
+          <span class="left">R - Rotate CW</span>
         </div>
         <div class="text">
           <span class="left">W - Rotate CCW</span>
+        </div>
+        <div class="text">
+          <span class="left">Space - Hard Drop</span>
         </div>
       </div>
       <svg id="svgCanvas">
